# nyc-taxi-data-etl

./: .gitignore  Makefile  README.md  Teste.ipynb  pyproject.toml  requirements.txt
dashboard/: app.py
docker/: .dockerignore  Dockerfile  docker-compose.yml  docker.env  pipeline.Dockerfile  streamlit.Dockerfile
pipeline/: dagster.yaml  setup.py
pipeline/dbt_transformation/: .user.yml  dbt_project.yml  profiles.yml
pipeline/dbt_transformation/macros/: export_to_minio.sql  get_descriptions.sql  miles_to_km.sql
pipeline/dbt_transformation/models/: schema.yml  source.yml
pipeline/dbt_transformation/models/gold/: green_trips_amount_by_payments.sql
pipeline/pipeline/: __init__.py  assets.py  duckUtilsResource.py  resources.py
pipeline/pipeline/assets/: raw_ingestion.py  raw_ingestion_checks.py
pipeline/pipeline/resources/: __init__.py  duckUtils.py
src/: run_pipeline.py
src/config/: config.py
src/dbt_transformation/: dbt_project.yml
src/dbt_transformation/models/: fhv_trips.sql  green_trips.sql  source.yml  yellow_trips.sql
src/etl/: extract.py
src/tests/: TestRequest.ipynb
tlc-pipeline/: README.md  pyproject.toml  setup.cfg  setup.py
tlc-pipeline/dbt_transformation/: dbt_project.yml  profiles.yml
tlc-pipeline/dbt_transformation/macros/: export_to_minio.sql
tlc-pipeline/dbt_transformation/models/: fhv_trips.sql  green_trips.sql  schema.yml  source.yml  yellow_trips.sql
tlc-pipeline/tlc_pipeline/: IngestManger.py  __init__.py  assets.py  duckUtils.py  duckUtilsResource.py  resources.py
(+20 files in other folders)
