[tool.poetry]
name = "tlc-data-etl"
version = "0.1.0"
description = ""
authors = ["joaoallmeida <joaoallmeida96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
dagster = {version="^1.7.10", python="3.12"}
dagster-webserver = {version="^1.7.10", python="3.12"}
beautifulsoup4 = "^4.12.3"
duckdb = "^1.0.0"
s3fs = "^2024.6.0"
ipykernel = "^6.29.4"
dbt-duckdb = {version = "1.8.1"}
dagster-duckdb = "^0.23.12"
dagster-dbt = "^0.23.12"
sqlescapy = "^1.0.1"
pandas = "^2.2.2"
streamlit = "^1.36.0"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
